# milk10k-fairness-skin-lesion-classification

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: aug_plus_loss.yaml  aug_plus_loss_2f.yaml  baseline.yaml  baseline_2f.yaml  custom_loss.yaml  custom_loss_2f.yaml  data_augmentation.yaml  data_augmentation_2f.yaml  ssl.yaml  ssl_2f.yaml
notebooks/: MILK10k_EDA.ipynb  model_training.ipynb  model_training_custom.ipynb  model_training_custom_loss_online_augmentation.ipynb  model_training_custom_online_augmentation.ipynb  model_training_online_augmentation.ipynb  multimodal_contrastive_self_supervised_learning.ipynb  supervised_cross_sensor_transfer_learning_online_aug_custom_loss.ipynb
scripts/: build_milk10k_dataset.py  run_aug_plus_loss.py  run_baseline.py  run_custom_loss.py  run_data_augmentation.py  run_eda.py  run_ssl.py
src/milk10k/: __init__.py
src/milk10k/data/: __init__.py  build_dataset.py  datasets.py  labels.py  transforms.py
src/milk10k/eda/: __init__.py  basic.py
src/milk10k/evaluation/: metrics.py
src/milk10k/models/: __init__.py  backbones.py  ssl.py
src/milk10k/training/: __init__.py  augmentation_plus_loss.py  baseline.py  common.py  custom_loss.py  data_augmentation.py  engine.py  losses.py  ssl_multimodal.py
src/milk10k/utils/: config.py  seed.py
