[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "milk10k-fairness"
version = "0.1.0"
description = "Fairness-aware skin lesion classification experiments on MILK10k"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "scikit-learn",
  "matplotlib",
  "seaborn",
  "pillow",
  "tqdm",
  "PyYAML",
  "torch",
  "torchvision",
]

[tool.setuptools.packages.find]
where = ["src"]
